# rstat

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: builder.rs  constraints.rs  consts.rs  convolution.rs  degenerate.rs  distance.rs  distribution.rs  fitting.rs  lib.rs  linalg.rs  macros.rs  mixture.rs  parameter.rs  prelude.rs  probability.rs  simplex.rs  statistics.rs  uniform.rs  utils.rs
src/bivariate/: mod.rs  normal.rs
src/continuous/: arcsine.rs  beta.rs  beta_prime.rs  cauchy.rs  chi.rs  chi_sq.rs  cosine.rs  dirichlet.rs  erlang.rs  exponential.rs  f_dist.rs  frechet.rs  gamma.rs  gev.rs  gpd.rs  gumbel.rs  inverse_gamma.rs  inverse_normal.rs  laplace.rs  levy.rs  logistic.rs  lognormal.rs  mod.rs  normal.rs  pareto.rs  rayleigh.rs  student_t.rs  triangular.rs  uniform.rs  weibull.rs
src/core/: convolution.rs  distribution.rs  fitting.rs  mod.rs  probability.rs  sampler.rs  statistics.rs
src/discrete/: bernoulli.rs  beta_binomial.rs  binomial.rs  categorical.rs  geometric.rs  mod.rs  multinomial.rs  poisson.rs  uniform.rs
src/multivariate/: dirichlet.rs  lognormal.rs  mod.rs  multinomial.rs  normal.rs  normal_biv.rs  normal_diag.rs
src/multivariate/continuous/: dirichlet.rs  lognormal.rs  mod.rs
src/multivariate/continuous/normal/: bivariate.rs  mod.rs  multivariate.rs
src/multivariate/discrete/: mod.rs  multinomial.rs
src/multivariate/normal/: bivariate.rs  diagonal.rs  general.rs  isotropic.rs  mod.rs  multivariate.rs
src/normal/: bivariate.rs  linalg.rs  mod.rs  multivariate.rs  paired.rs  univariate.rs
src/params/: common.rs  concentrations.rs  constraints.rs  corr.rs  count.rs  dof.rs  mod.rs  rate.rs  scale.rs  shape.rs
src/univariate/: arcsine.rs  bernoulli.rs  beta.rs  beta_binomial.rs  beta_prime.rs  binomial.rs  categorical.rs  cauchy.rs  chi.rs  chi_sq.rs  cosine.rs  degenerate.rs  erlang.rs  exponential.rs  f_dist.rs  folded_normal.rs  frechet.rs  gamma.rs  geometric.rs  gev.rs  gpd.rs  gumbel.rs  inverse_gamma.rs  inverse_normal.rs  kumaraswamy.rs  laplace.rs  levy.rs  logistic.rs  lognormal.rs  mod.rs  normal.rs  pareto.rs  poisson.rs  rayleigh.rs  student_t.rs  triangular.rs  uniform.rs  weibull.rs
src/univariate/continuous/: arcsine.rs  beta.rs  beta_prime.rs  cauchy.rs  chi.rs  chi_sq.rs  cosine.rs  dirichlet.rs  erlang.rs  exponential.rs  f_dist.rs  folded_normal.rs  frechet.rs  gamma.rs  gev.rs  gpd.rs  gumbel.rs  inverse_gamma.rs  inverse_normal.rs  laplace.rs  levy.rs  logistic.rs  lognormal.rs  mod.rs  normal.rs  pareto.rs  rayleigh.rs  student_t.rs  triangular.rs  weibull.rs
src/univariate/discrete/: bernoulli.rs  beta_binomial.rs  binomial.rs  categorical.rs  mod.rs  poisson.rs
src/validation/: constraints.rs  mod.rs
