[package]
name = "rstat"
description = "Probability distributions and statistics in Rust with integrated fitting routines, convolution support and mixtures"

version = "0.6.0"
authors = ["Tom Spooner <spooner10000@gmail.com>"]

license = "MIT"
readme = "README.md"

keywords = ["probability", "statistics", "sampling", "distribution"]

repository = "https://github.com/tspooner/rstat"
documentation = "https://docs.rs/rstat"

edition = "2018"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex.html"]

[features]
default = []

serde = ["serde_crate", "ndarray/serde", "spaces/serialize"]

[dependencies]
failure = "0.1"

rand = "0.7"
rand_distr = "0.2"

num = "0.2"
special-fun = "0.2"

spaces = "5.0"

ndarray = "0.13"
ndarray-linalg = { version = "0.12", optional = true }

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]
