[package]
name = "rstat"
description = "Probability distributions and statistics in Rust with integrated fitting routines, convolution support and mixtures"

version = "0.6.0"
authors = ["Tom Spooner <spooner10000@gmail.com>"]

license = "MIT"
readme = "README.md"

keywords = ["probability", "statistics", "sampling", "distribution"]

repository = "https://github.com/tspooner/rstat"
documentation = "https://docs.rs/rstat"

edition = "2018"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex.html"]

[features]
default = []

serde = ["serde_crate", "spaces/serde"]

[dependencies]
failure = "0.1"

rand = "0.8"
rand_distr = "0.4"

num = "0.4"
special-fun = "0.2"

blas = { version = "0.22", default-features = false }
lapack = { version = "0.19", default-features = false }

# spaces = "6.0"
spaces = { path = "../spaces" }

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dev-dependencies]
blas-src = { version = "0.8", features = ["accelerate"] }
